examples-generated/namespaced/directconnect/v1beta1/hostedtransitvirtualinterfaceaccepter.yaml

apiVersion: directconnect.m.aws.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: directconnect/v1beta1/hostedtransitvirtualinterfaceaccepter
  labels:
    testing.upbound.io/example-name: example
  name: example
spec:
  forProvider:
    amazonSideAsn: 64512
    name: tf-dxg-example
    provider: ${aws.accepter}
    region: us-west-1
